--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
+    "@react-three/cannon": "^3.0.1",
+    "@react-three/drei": "^7.5.0",
+    "@react-three/fiber": "^7.0.6",
+    "nice-color-palettes": "^3.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.132.2"
   }
 }
